[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.18.0", features=["full"] }
tokio-stream = "0.1.8"
tokio-util = {version="0.7.1",features=["codec","io"]}
bytes = "1.1.0"
serde = {version="1.0.137",features=["derive"]}
bincode = "1.3.3"
log = "0.4.17"
simple_logger = "2.1.0" 