
[package]
name = "destination-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.18.0", features=["full"] }
tokio-stream = "0.1.8"
tokio-util = { version="0.7.1",features=["codec","io"] }
bytes = "1.1.0"
serde = { version="1.0.137", features=["derive"] }
lazy_static = "1.4.0"
bincode = "1.3.3"
rand = "0.8.5"
indicatif = "0.16.2"
    